# toggle_desktop_icons_on_click

./: .gitignore  Cargo.toml  README.md  build.bat  build.ps1  build.rs
Docs/: .gitignore-info.md  build-scripts.md  settings.md
settings-ui/: package.json
settings-ui/src/: App.css  App.tsx
settings-ui/src-tauri/: Cargo.toml  tauri.conf.json
settings-ui/src-tauri/src/: lib.rs  main.rs
src/: cursor_hider.rs  main.rs
