[package]
name = "desktop_icon_toggler"
version = "0.1.0"
edition = "2024"

[dependencies]

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi", # <--- ДОБАВИТЬ ЭТУ СТРОКУ
]

[build-dependencies]
winres = "0.1"
