[package]
name = "windows_multitool"
version = "0.1.0"
edition = "2024"
description = "A lightweight Windows utility with desktop icon toggler, cursor hider, and more system enhancements"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi", # <--- ДОБАВИТЬ ЭТУ СТРОКУ
]

[dependencies]
winreg = "0.52"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
